<resources>
    <string name="app_name">Funnregistrering</string>
    <string name="name">Navn</string>
    <string name="address">Adresse</string>
    <string name="postal_code">Postnummer</string>
    <string name="phone_num">Telefonnummer</string>
    <string name="email">Epost</string>
    <string name="create_profile">Opprett profil</string>
    <string name="last_name">Etternavn</string>
    <string name="passwd">Ønsket Passord</string>
    <string name="home">Home</string>
    <string name="profil_oppretting">Profil Oppretting</string>
    <string name="ingenting_i_listen">Ingenting i listen</string>
    <string name="registrere_lose_funn_tittel">Nytt funn</string>
    <string name="registrere_lose_funn_et_tittel">Tittel</string>
    <string name="registrere_lose_funn_btn_bilde">Legg til bilde</string>
    <string name="registrere_lose_funn_btn_gps">Legg til GPS koordinater</string>
    <string name="registrere_lose_funn_et_beskrivelse">Beskrivelse</string>
    <string name="registrere_lose_funn_btn_funnskjema">Til funnskjema</string>
    <string name="registrere_lose_funn_btn_funnmelding">Send funnmelding</string>
    <string name="registrere_lose_funn_btn_lagre">Lagre</string>
    <string name="enkelt_funn_tom_et">ikke fylt ut</string>
    <string name="fragment_enkelt_funn_btn_endre_bilde">Endre bilde</string>
    <string name="login_user_name">Brukernavn</string>
    <string name="login_login">Logg inn</string>
    <string name="login_password">Passord</string>
    <string name="login_not_a_user">Ikke en bruker?</string>
    <string name="login_Reg_here">Registrer deg her</string>
    <string name="confirm_pw">Gjenta passord</string>
    <string name="inputvalideringMinLengde">"Teksten må våre minst "</string>
    <string name="tegn">" tegn"</string>
    <string name="inputvalideringIkkeBokstaver">"Du kan ikke ha bokstaver her"</string>
    <string name="inputvalideringIkkeTall">"Du kan ikke ha tall her"</string>
    <string name="inputvalideringIkkeSpesialtegn">"Du kan ikke ha spesialtegn her"</string>
    <string name="fragment_enkelt_funn_status_btn_funnmelding">send inn funnmelding</string>
    <string name="enkelt_funn_status_btn_funnskjema">Send inn funnskjema</string>
    <string name="introText">Dette er en applikasjon for innmelding av arkeologiske funn. Her kan du også sende funnskjema, og lage en oversikt over dine egne funn. \n \nKos deg!</string>
    <string name="feil_i_innputfelter">"Kunne ikke lagre på grunn av feil i "</string>
    <string name="ulike_passord">Passordene er ikke like</string>
    <string name="Tall_for_stort">"Tallet må være mindre enn "</string>
    <string name="Tall_for_lite">"Tallet må være større enn "</string>
    <string name="tomt_felt">"Kunne ikke lagre på grunn av tom "</string>
    <string name="godkjenning_grunneier">Jeg har snakket med og fått godkjenning av grunneier.</string>
    <string name="glemt_passord">glemt passord</string>
    <string name="riksantikvaren_sider">På Riksantikvarens sider kan du lese om hva du skal gjøre om du har funnet noe, lovgivningen rundt dette og retningslinjene rundt finnerlønn.\n</string>
    <string name="Link_Messaage"><a href="https://www.riksantikvaren.no/funn/jeg-har-funnet-noe/">Les mer her</a>
</string>
    <string name="tips_meldeplikt">\u2022 Meldeplikt: Det er obligatorisk å melde inn et funn til fylkeskommune eller museum innen 48 timer! Appen vil hjelpe deg å sende mail til den mest relevante aktøren.\n</string>
    <string name="tips_fredning">\u2022 Fredning: Pass på å ikke grav i fredede områder! Hver gang et innleveringsverdigfunn er oppdaget så er området 5m rundt den automatisk fredet.\n</string>
    <string name="tips_samfunn">\u2022 Samfunn: Dersom du er en veldig ny "detektorist" så kan det være smart å ta kontakt med ditt lokallag eller en av de større foreningene. De tar deg ofte godt i mot og er veldig hjelpsomme. Dette kan både gjøres gjennom mail,  diverse Facebook grupper og andre metoder.\n</string>
</resources>