<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/ffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="Tips og ressurser"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/ffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/frednings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/buttonColor"
                android:onClick="visFredningsTXT"
                android:text="Området rundt funnet er fredet" />

            <TextView
                android:id="@+id/fredningTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="@string/tips_fredning" />

            <Button
                android:id="@+id/meldeplikt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/buttonColor"
                android:onClick="viMeldepliktTXT"
                android:text="Du har meldeplikt " />

            <TextView
                android:id="@+id/meldepliktTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="@string/tips_meldeplikt" />

            <Button
                android:id="@+id/samfunn_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/buttonColor"
                android:onClick="visSamfunnTXT"
                android:text="Få kontakt med detektormiljøet" />

            <TextView
                android:id="@+id/samfunnTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="@string/tips_samfunn" />


            <Button
                android:id="@+id/funnetNoe_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/buttonColor"
                android:onClick="visfunnetNoeTXT"
                android:text="Hva skal jeg gjøre om jeg har funnet noe?" />

            <TextView
                android:id="@+id/riksText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/riksantikvaren_sider" />

            <TextView
                android:id="@+id/LinkOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="LinkBtn"
                android:text="@string/Link_Messaage"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>